--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,7 +4,7 @@
     <PreferenceCategory app:title="General">
 
         <ListPreference
-            android:defaultValue="1"
+            android:defaultValue="false"
             android:entries="@array/languages"
             android:entryValues="@array/languages"
             android:key="list_preference_1"
