--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,11 +4,12 @@
     <PreferenceCategory app:title="General">
 
         <ListPreference
-            android:defaultValue="false"
+            android:defaultValue="Greek"
             android:entries="@array/languages"
-            android:entryValues="@array/languages"
-            android:key="list_preference_1"
-            android:title="Default translating language" />
+            android:entryValues="@array/languages_values"
+            android:key="default_translating_language"
+            android:title="Default translating language"
+            android:summary="Pick a default language to translate your text to"/>
 
     </PreferenceCategory>
 
