--- a/app/src/main/res/layout/activity_stats_menu.xml
+++ b/app/src/main/res/layout/activity_stats_menu.xml
@@ -11,54 +11,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show map"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/userLeaderboardBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/pplrTranslationsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Popular translations"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toTopOf="@+id/pplrLanguagesBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/pplrWordsBtn" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/userLeaderboardBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:text="User leaderboard"
+        app:layout_constraintBottom_toTopOf="@+id/pplrWordsBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showMapBtn" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/pplrWordsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
+        android:text="Popular words"
+        app:layout_constraintBottom_toTopOf="@+id/pplrTranslationsBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/userLeaderboardBtn" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/pplrLanguagesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Popular languages"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/pplrTranslationsBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
